--- a/OClusterMapViewSample/en.lproj/MainStoryboard.storyboard
+++ b/OClusterMapViewSample/en.lproj/MainStoryboard.storyboard
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.0" toolsVersion="1891" systemVersion="10K540" targetRuntime="iOS.CocoaTouch" nextObjectID="36" propertyAccessControl="none" initialViewController="2">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.0" toolsVersion="1923" systemVersion="11B26" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
     <dependencies>
         <deployment defaultVersion="1280" identifier="iOS"/>
         <development defaultVersion="4200" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="884"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="919"/>
     </dependencies>
     <scenes>
         <scene sceneID="5">
@@ -110,13 +110,12 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="-418" y="47"/>
+            <point key="canvasLocation" x="-102" y="96"/>
         </scene>
     </scenes>
     <classes>
         <class className="OCMapView" superclassName="MKMapView">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/OCMapView.h"/>
-            <relationships/>
         </class>
         <class className="OClusterMapViewSampleViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/OClusterMapViewSampleViewController.h"/>
