fixed typo in nibs

--- a/OClusterMapView+Sample/iPad/en.lproj/OClusterMapView_SampleViewController-iPad.xib
+++ b/OClusterMapView+Sample/iPad/en.lproj/OClusterMapView_SampleViewController-iPad.xib
@@ -250,7 +250,7 @@
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">1316</int>
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
-						<string key="NSFrame">{{165, 954}, {130, 30}}</string>
+						<string key="NSFrame">{{165, 954}, {130, 29}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -259,7 +259,7 @@
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
-						<string key="IBUINormalTitle">group by tag off</string>
+						<string key="IBUINormalTitle">turn groups on</string>
 						<reference key="IBUIHighlightedTitleColor" ref="451709449"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">1</int>
