correct rotation for iphone/ipad

--- a/OClusterMapView+Sample/iPad/en.lproj/OClusterMapView_SampleViewController-iPad.xib
+++ b/OClusterMapView+Sample/iPad/en.lproj/OClusterMapView_SampleViewController-iPad.xib
@@ -51,7 +51,7 @@
 					</object>
 					<object class="IBUIView" id="153773403">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">274</int>
+						<int key="NSvFlags">266</int>
 						<array class="NSMutableArray" key="NSSubviews"/>
 						<string key="NSFrame">{{0, 824}, {768, 180}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
@@ -105,7 +105,7 @@
 						<string key="NSFrame">{{730, 956}, {18, 19}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="878780966"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:241</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -233,7 +233,7 @@
 						<string key="NSFrame">{{180, 854}, {150, 36}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="798216537"/>
+						<reference key="NSNextKeyView" ref="878780966"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -253,6 +253,7 @@
 						<string key="NSFrame">{{180, 940}, {150, 36}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="798216537"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
