updated ios7 appearance

--- a/OClusterMapView+Sample/OClusterMapView_SampleViewController-iPad.xib
+++ b/OClusterMapView+Sample/OClusterMapView_SampleViewController-iPad.xib
@@ -62,7 +62,7 @@
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MAA</bytes>
 						</object>
-						<float key="IBUIAlpha">0.5</float>
+						<float key="IBUIAlpha">0.69999998807907104</float>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					</object>
 					<object class="IBUILabel" id="798216537">
